<resources>
    <string name="app_name">Map</string>

    <string name="hggjg">Троллейбус 2:
        В будни Ежедневно 07:00 - 23:00
        каждые 20 мин
        В выходные Ежедневно 07:00 - 23:00
        каждые 40 мин
    </string>

    <string name="tr3">Троллейбус 3:
        В будни Ежедневно 07:00 - 23:00 
        каждые 15 мин
        В выходные Ежедневно 07:00 - 23:00
        каждые 30 мин
    </string>

    <string name="tr4">Троллейбус 4:
        В будни Ежедневно 07:00 - 23:00
        каждые 35 мин
        В выходные Ежедневно 07:00 - 23:00
        каждые 40 мин
    </string>

    <string name="tr5">Троллейбус 5:
        Ежедневно 05:00 - 23:00
        каждые 45 мин
    </string>

    <string name="tr6">Троллейбус 6:
        Ежедневно 05:00 - 23:00
        каждые 45 мин
    </string>

    <string name="tr7">Троллейбус 7:
        В будни Ежедневно 07:00 - 23:00
        каждые 24 мин
        В выходные Ежедневно 07:00 - 23:00
        каждые 34 мин
    </string>

    <string name="tr8">Троллейбус 8:
        В будни Ежедневно 07:00 - 23:00
        каждые 38 мин
        В выходные Ежедневно 07:00 - 23:00
        каждые 50 мин
    </string>

    <string name="tr11">Троллейбус 11:
        В будни Ежедневно 07:00 - 23:00
        каждые 38 мин
        В выходные Ежедневно 07:00 - 23:00
        каждые 50 мин
    </string>

</resources>